2006-04-26  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>

	* textmodes/bibtex.el (bibtex-user-optional-fields): Mark as
	risky.

2006-04-26  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>

	* textmodes/bibtex.el (bibtex-url): New optional arg no-browse.
	Return the URL or nil if none can be generated.

2006-04-27  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gud.el (gud-comint-buffer): Move forward to stop
	byte compiler warnings.
	(gud-basic-call, gud-find-expr): Let user select an expression
	for printing.  Print expression as well as value in GUD buffer.

2006-04-17  Ken Manheimer  <ken.manheimer@gmail.com>

	* allout.el: Remove local autoload declaration for
	pgg-gpg-symmetric-key-p, since that's now done in pgg-gpg.el.
	(allout-show-bodies, allout-header-prefix, allout-primary-bullet)
	(allout-plain-bullets-string, allout-distinctive-bullets-string)
	(allout-use-mode-specific-leader, allout-old-style-prefixes)
	(allout-stylish-prefixes, allout-numbered-bullet)
	(allout-file-xref-bullet, allout-presentation-padding)
	(allout-use-hanging-indents, allout-reindent-bodies): Mark as
	safe-local-variable with suitable value spec, and add autoload
	cookie for loaddefs inclusion.  We now use an explicit spec everywhere.
	(move-beginning-of-line, move-end-of-line): Repair so these compat
	functions now actually resituate the point, when appropriate.

2006-04-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/cc-subword.el (c-subword-mode-map): Use command remapping.

	* add-log.el (add-log-iso8601-time-zone): Make parameter optional.
	(add-log-iso8601-time-string): Fix call to format-time-string.

2006-04-26  Kim F. Storm  <storm@cua.dk>

	* subr.el (posn-string, posn-image, posn-object): Doc fix.

2006-04-26  Masatake YAMATO  <jet@gyve.org>

	* progmodes/asm-mode.el (asm-mode, asm-mode-syntax-table):
	Add support for "//" style comments.  Remove `b' flag
	from ?* in `asm-mode-syntax-table'.
