@@ -1,3 +1,8 @@
+2006-04-27  Reiner Steib  <Reiner.Steib@gmx.de>
+
+	* startup.el (command-line-1): Display warning when
+	pure-space-overflow is non-nil.
+
 2006-04-26  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>
 
 	* textmodes/bibtex.el (bibtex-user-optional-fields): Mark as
